feat: login, signup and me endpoint
