# pkg/controller/auth/signup.go
@@ -1,0 +1,11 @@
+package auth
+
+import (
+	"github.com/dwarvesf/go-api/pkg/model"
+)
+
+func (c *impl) Signup(req model.SignupRequest) error {
+	// TODO: create new user in db
+
+	return nil
+}
