# pkg/handler/v1/viewmodel/resoonse.go
@@ -1,0 +1,6 @@
+package viewmodel
+
+// MessageResponse is the response for message
+type MessageResponse struct {
+	Message string `json:"message" validate:"required"`
+} // @name MessageResponse
