# pkg/handler/v1/viewmodel/user.go
@@ -1,0 +1,7 @@
+package viewmodel
+
+// MeResponse represent the user response
+type MeResponse struct {
+	ID    string `json:"id" validate:"required"`
+	Email string `json:"email" validate:"required"`
+} // @name MeResponse
